<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="4">

    <TextView
        android:id="@+id/catagory"
        android:layout_column="1"
        android:layout_gravity="start"
        android:layout_row="1"
        android:text="@string/catagory" />

    <TextView
        android:id="@+id/amount"
        android:layout_column="2"
        android:layout_gravity="start"
        android:layout_row="1"
        android:text="@string/editText" />


    <TextView
        android:id="@+id/type"
        android:layout_column="3"
        android:layout_gravity="start"
        android:layout_row="1"
        android:text="@string/type" />


    <Space
        android:layout_width="21dp"
        android:layout_height="1dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="21dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="64dp"
        android:layout_height="1dp"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:layout_row="0" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="2" />

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_column="0"
        android:layout_gravity="fill_horizontal"
        android:layout_row="4" />
</GridLayout>